[JSC] Temporal.Calendar.toJSON should check exception https://bugs.webkit.org/show_bug.cgi?id=245087 <rdar://99829790>

Reviewed by Ross Kirsling.

Use RELEASE_AND_RETURN.

* Source/JavaScriptCore/runtime/TemporalCalendarPrototype.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/254396@main